# hw2

./: README.md  horn.cabal  stack.yaml
src/: Main.hs
src/Horn/: CmdLine.hs  Monad.hs
src/Horn/Bindings/: Z3.hs
src/Horn/Fixpoint/: Fixpoint.hs
src/Horn/HornVCs/: HornVCs.hs
src/Horn/Logic/: Clauses.hs
src/Horn/Nano/: Nano.hs
tests/neg/: sum.js  sum2.js  twoloops.js  while-segments.js  while0.js  while5-false.js  while5-wrong-assert.js  while5.js
tests/pos/: driver.js  locks-loops.js  sum.js  sum2.js  swap.js  test.js  test1.js  test2.js  test3.js  test4.js  twoloops.js  while-segments.js  while0.js  while5.js
